Fixed currency selector form control alignment

--- a/rsc/less/bootstrap-blog_base.less
+++ b/rsc/less/bootstrap-blog_base.less
@@ -1155,3 +1155,16 @@ div#fileuploader_form {
 		visibility: hidden;
 	}
 }
+
+// Currency selector widget
+.widget_core_currency_selector {
+	label {
+		width: auto;
+		padding: 0 15px 0 0;
+	}
+
+	select {
+		width: auto;
+		display: inline-block;
+	}
+}
